added 31 markdown files for zines, updated zine img file names

--- a/source/_data/memes.yml
+++ b/source/_data/memes.yml
@@ -5,13 +5,13 @@
   instagram: https://instagram.com
   pinterest: https://pinterest.com
 - name: idk anymore
-  image: https://dummyimage.com/800x800/ff0/000
+  image: https://dummyimage.com/800x800/bbb/fff
   description: idk anymore
   facebook: https://facebook.com
   instagram: https://instagram.com
   pinterest: https://pinterest.com
 - name: yay finally
-  image: https://dummyimage.com/800x800/f00/000
+  image: https://dummyimage.com/800x800/bbb/fff
   twitter: yay finally
   facebook: https://facebook.com
   instagram: https://instagram.com
@@ -23,13 +23,13 @@
   instagram: https://instagram.com
   pinterest: https://pinterest.com
 - name: cuida la tierra
-  image: https://dummyimage.com/800x800/ff0/000
+  image: https://dummyimage.com/800x800/bbb/fff
   twitter: cuida la tierra
   facebook: https://facebook.com
   instagram: https://instagram.com
   pinterest: https://pinterest.com
 - name: so many things
-  image: https://dummyimage.com/800x800/f00/000
+  image: https://dummyimage.com/800x800/bbb/fff
   twitter: so many things
   facebook: https://facebook.com
   instagram: https://instagram.com
